--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,3 +1,3 @@
-#Sun Aug 18 00:39:10 ICT 2013
+#Tue Sep 10 02:08:51 ICT 2013
 eclipse.preferences.version=1
-include_path=0;/education
+include_path=0;/badev
